--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
                 <option value="html">HTML</option>
                 <option value="css">CSS</option>
                 <option value="js">JavaScript</option>
+                <option value="mysql">MySQl</option>
+                <option value="python">Python</option>
             </select>
             <br><br>
 
